--- a/house-prices-advanced-regression-techniques.ipynb
+++ b/house-prices-advanced-regression-techniques.ipynb
@@ -549,7 +549,7 @@
    "source": [
     "from sklearn.model_selection import train_test_split\n",
     "\n",
-    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2)"
+    "X_train, X_test, y_train, y_test = train_test_split(X, y)"
    ]
   },
   {
@@ -578,19 +578,19 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/usr/local/Caskroom/miniconda/base/envs/ml/lib/python3.9/site-packages/sklearn/linear_model/_coordinate_descent.py:530: ConvergenceWarning: Objective did not converge. You might want to increase the number of iterations. Duality gap: 188974245750.5427, tolerance: 681603009.1521446\n",
+      "/usr/local/Caskroom/miniconda/base/envs/ml/lib/python3.9/site-packages/sklearn/linear_model/_coordinate_descent.py:530: ConvergenceWarning: Objective did not converge. You might want to increase the number of iterations. Duality gap: 189013308318.6201, tolerance: 717877312.0124497\n",
       "  model = cd_fast.enet_coordinate_descent(\n",
-      "/usr/local/Caskroom/miniconda/base/envs/ml/lib/python3.9/site-packages/sklearn/linear_model/_coordinate_descent.py:530: ConvergenceWarning: Objective did not converge. You might want to increase the number of iterations. Duality gap: 140935467794.34488, tolerance: 531583418.9053459\n",
+      "/usr/local/Caskroom/miniconda/base/envs/ml/lib/python3.9/site-packages/sklearn/linear_model/_coordinate_descent.py:530: ConvergenceWarning: Objective did not converge. You might want to increase the number of iterations. Duality gap: 143231435654.5646, tolerance: 614327741.6201366\n",
       "  model = cd_fast.enet_coordinate_descent(\n",
-      "/usr/local/Caskroom/miniconda/base/envs/ml/lib/python3.9/site-packages/sklearn/linear_model/_coordinate_descent.py:530: ConvergenceWarning: Objective did not converge. You might want to increase the number of iterations. Duality gap: 134329248831.70123, tolerance: 554726948.0562598\n",
+      "/usr/local/Caskroom/miniconda/base/envs/ml/lib/python3.9/site-packages/sklearn/linear_model/_coordinate_descent.py:530: ConvergenceWarning: Objective did not converge. You might want to increase the number of iterations. Duality gap: 132336604243.02495, tolerance: 559191633.1627562\n",
       "  model = cd_fast.enet_coordinate_descent(\n",
-      "/usr/local/Caskroom/miniconda/base/envs/ml/lib/python3.9/site-packages/sklearn/linear_model/_coordinate_descent.py:530: ConvergenceWarning: Objective did not converge. You might want to increase the number of iterations. Duality gap: 142888874983.775, tolerance: 524773512.07216865\n",
+      "/usr/local/Caskroom/miniconda/base/envs/ml/lib/python3.9/site-packages/sklearn/linear_model/_coordinate_descent.py:530: ConvergenceWarning: Objective did not converge. You might want to increase the number of iterations. Duality gap: 132160990435.28796, tolerance: 569878974.5765338\n",
       "  model = cd_fast.enet_coordinate_descent(\n",
-      "/usr/local/Caskroom/miniconda/base/envs/ml/lib/python3.9/site-packages/sklearn/linear_model/_coordinate_descent.py:530: ConvergenceWarning: Objective did not converge. You might want to increase the number of iterations. Duality gap: 138043874431.87183, tolerance: 552477181.3356166\n",
+      "/usr/local/Caskroom/miniconda/base/envs/ml/lib/python3.9/site-packages/sklearn/linear_model/_coordinate_descent.py:530: ConvergenceWarning: Objective did not converge. You might want to increase the number of iterations. Duality gap: 148504269524.6538, tolerance: 580413558.0422573\n",
       "  model = cd_fast.enet_coordinate_descent(\n",
-      "/usr/local/Caskroom/miniconda/base/envs/ml/lib/python3.9/site-packages/sklearn/linear_model/_coordinate_descent.py:530: ConvergenceWarning: Objective did not converge. You might want to increase the number of iterations. Duality gap: 143065287120.71887, tolerance: 561780503.2958639\n",
+      "/usr/local/Caskroom/miniconda/base/envs/ml/lib/python3.9/site-packages/sklearn/linear_model/_coordinate_descent.py:530: ConvergenceWarning: Objective did not converge. You might want to increase the number of iterations. Duality gap: 138302936408.7442, tolerance: 547372866.1558406\n",
       "  model = cd_fast.enet_coordinate_descent(\n",
-      "/usr/local/Caskroom/miniconda/base/envs/ml/lib/python3.9/site-packages/sklearn/linear_model/_coordinate_descent.py:530: ConvergenceWarning: Objective did not converge. You might want to increase the number of iterations. Duality gap: 14482275891.788025, tolerance: 681603009.1521446\n",
+      "/usr/local/Caskroom/miniconda/base/envs/ml/lib/python3.9/site-packages/sklearn/linear_model/_coordinate_descent.py:530: ConvergenceWarning: Objective did not converge. You might want to increase the number of iterations. Duality gap: 257476945288.96414, tolerance: 717877312.0124497\n",
       "  model = cd_fast.enet_coordinate_descent(\n"
      ]
     },
@@ -673,7 +673,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Root mean squared log error: 0.113\n"
+      "Root mean squared log error: 0.121\n"
      ]
     }
    ],
